Avoid warnings for sun.misc.Unsafe from javafx.graphics